# lsp-server-client-test

./: .gitignore  CLAUDE.md  README.md
docs_ia/: backend.md  frontend.md  proyecto.md
lsp-backend/: Cargo.toml  Untitled
lsp-backend/src/: .lspignore  main.rs
lsp-backend/src/utils/: mod.rs
lsp-client/: package-lock.json  package.json  tsconfig.json
lsp-client/dependency-graph/: CLAUDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
lsp-client/dependency-graph/.svelte-kit/: ambient.d.ts
lsp-client/dependency-graph/.svelte-kit/output/client/.vite/: manifest.json
lsp-client/dependency-graph/.svelte-kit/output/client/_app/: version.json
lsp-client/dependency-graph/.svelte-kit/output/prerendered/pages/: index.html
lsp-client/dependency-graph/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
lsp-client/dependency-graph/src/: App.svelte  README.md  main.ts
lsp-client/dependency-graph/src/json/: complex.json  mid.json  simple.json
lsp-client/dependency-graph/src/lib/: GraphCache.js  GraphView.css  GraphView.svelte  data.ts  edges.ts  events.ts  graph.ts  mockData.js  mockDataMidProject.js  nodes.ts  protocol.ts  treeSitterAdapter.js  types.ts  vscode.ts
lsp-client/dependency-graph/src/routes/: +layout.ts  +page.svelte
lsp-client/src/: extension.ts
mid-mock/: main.py
mid-mock/projecto/: formatters.py  notification.py  order.py  product.py  shop.py  user.py  users.py  validators.py
(+30 files in other folders)
