[package]
name = "lsp-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tower-lsp = "0.20.0"
tree-sitter-test = { path = "../../tree-sitter-test" }
